<resources>
    <string name="app_name">SquadSync</string>
    <string name="title_home">Home</string>
    <string name="title_fixtures">Fixtures</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="edit_fixture">Edit Fixture</string>
    <string name="enter_result">Enter Result</string>
    <string name="fixture_details">Fixture Details:</string>
    <string name="formation">Formation</string>
    <string name="pitch">Pitch</string>
    <string name="datetime">DateTime</string>
    <string name="location">Location</string>
    <string name="teamsplaying">Teams Playing</string>
    <string name="back">Back</string>
    <string name="create_fixture">Create Fixture</string>
    <string name="example_formation">e.g. 4-4-2</string>
    <string name="example_address">e.g. 21 White Hart Lane EG4 5HJ</string>
    <string name="example_team">e.g. IC A</string>
    <string name="pitch_type">Pitch Type</string>
    <string name="opponent">Opponent</string>
    <string name="example_pitch_type">e.g. Mud/Grass</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="example_date">e.g. 21/4/24</string>
    <string name="example_time">e.g. 15:00</string>
    <string name="create_new_fixture">Create New Fixture</string>
    <string name="team">Team</string>
    <string name="example_score">0</string>
    <string name="save_result">Save Result</string>
    <string name="upcoming_fixtures">Upcoming Fixtures</string>
    <string name="filter">Filter</string>
    <string name="fixtures">Fixtures</string>
    <string name="announcements">Announcements</string>
    <string name="log_out">Log Out</string>
    <string name="button_not_in_use">...</string>
    <string name="results">Results</string>
    <string name="user_email">#user_email</string>
    <string name="manage_team">Manage Team</string>
    <string name="view_profile">View Profile</string>
    <string name="register">Register</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="make_fixture">Make Fixture</string>
    <string name="team_name">Team Name</string>
    <string name="make_team_announcement">Make Team Announcement</string>
    <string name="left_footed">Left Footed</string>
    <string name="right_footed">Right Footed</string>
    <string name="year_1">Year 1</string>
    <string name="year_2">Year 2</string>
    <string name="year_3">Year 3</string>
    <string name="year_4">Year 4</string>
    <string name="your_profile">Your Profile</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="your_email">your email</string>
    <string name="uid">UID</string>
    <string name="your_uid">your uid</string>
    <string name="save">Save</string>
    <string name="positions">Positions</string>
    <string name="edit_positions">Edit Positions</string>
    <string name="your_positions">your positions</string>
    <string name="captain_question">Are you a captain?</string>
    <string name="register_team">Register Team</string>
    <string name="select_your_positions">Select your positions</string>
    <string name="teams_playing">teams playing</string>
    <string name="info">info</string>
    <string name="available_question">Available?</string>
    <string name="lse">LSE</string>
    <string name="_1st">1st</string>
    <string name="_21_06_2023">21/06/2023</string>
    <string name="_14_00">14:00</string>
    <string name="ucl">UCL</string>
    <string name="_2nd">2nd</string>
    <string name="york">York</string>
    <string name="_28_06_2023">28/06/2023</string>
    <string name="_10_00">10:00</string>
    <string name="result_details">Result Details</string>
    <string name="announcement">Announcement</string>
    <string name="make_announcement">Make Announcement</string>
    <string name="announce">Announce</string>
</resources>