<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fixtures.FixturesFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TableRow
            android:layout_width="378dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/opponent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="73dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:text="@string/team" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/date" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="77dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:text="@string/time" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/available_question" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lse" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1st" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_06_2023" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14_00" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ucl" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2nd" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_06_2023" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14_00" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/york" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1st" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_28_06_2023" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_00" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>