<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pswText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text|textPassword"
        app:layout_constraintStart_toStartOf="@+id/emailText2"
        app:layout_constraintTop_toBottomOf="@+id/emailText2" />

    <EditText
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/pswText2"
        app:layout_constraintTop_toBottomOf="@+id/pswText2" />

    <EditText
        android:id="@+id/emailText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/second_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/firstNameText"
        app:layout_constraintTop_toBottomOf="@+id/firstNameText" />

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:text="@string/register"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/playerProfileYearRadioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="62dp"
        app:layout_constraintBottom_toBottomOf="@+id/registerButton2"
        app:layout_constraintEnd_toStartOf="@+id/leftFootCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lastNameText">

        <RadioButton
            android:id="@+id/playerProfileyear1RadioButton"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/year_1" />

        <RadioButton
            android:id="@+id/playerProfileyear2RadioButton"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/year_2" />

        <RadioButton
            android:id="@+id/playerProfileyear3RadioButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/year_3" />

        <RadioButton
            android:id="@+id/playerProfileyear4RadioButton"
            android:layout_width="130dp"
            android:layout_height="38dp"
            android:text="@string/year_4" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/rightFoorCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="72dp"
        android:text="@string/right_footed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerProfileYearRadioGroup"
        app:layout_constraintTop_toTopOf="@+id/playerProfileYearRadioGroup" />

    <CheckBox
        android:id="@+id/leftFootCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="78dp"
        android:text="@string/left_footed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerProfileYearRadioGroup"
        app:layout_constraintTop_toTopOf="@+id/rightFoorCheckBox" />

    <CheckBox
        android:id="@+id/isCaptainCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/captain_question"
        app:layout_constraintStart_toEndOf="@+id/playerProfileYearRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/leftFootCheckBox" />

</androidx.constraintlayout.widget.ConstraintLayout>